--- a/flappy.html
+++ b/flappy.html
@@ -8,11 +8,10 @@
     <title>flappy bird game</title>
     <link rel="stylesheet" href="flappy.css">
     <script src="flappy.js" defer></script>
-
 </head>
 <body>
     <div class="background"></div>
-    <img src="images/kk.png" alt="" class="bird" id="bird-1">
+    <img src="images/nae.jpeg" alt="" class="bird" id="bird-1">
     <div class="message">
         Enter To Start Game <br> and I Rereloluwa Abidoye made this Game<p><span style="color: red">&uarr;</span> ArrowUp to control</p> 
     </div>
@@ -20,5 +19,6 @@
         <span class="score_title"></span>
         <span class="score_val"></span>
     </div>
+   
 </body>
 </html>
